{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 42,
  "lineage": "b639f2fa-2c43-0a8b-f2b7-76cf69bd8949",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "back",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:242906888793:instance/i-061e86629df2ef1a3",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-061e86629df2ef1a3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nsoroka-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-019b0b254c1eac8a4",
            "private_dns": "ip-10-0-20-10.ec2.internal",
            "private_ip": "10.0.20.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-098fd4cc0fb4cf832",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d67da05ca6cf0ef9",
            "tags": {
              "Name": "nsoroka-training-back-us-east-1a",
              "coherent:owner": "nikolaisoroka@coherentsolutions.com",
              "coherent:project": "devops-training"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09e497912fa0dcad2"
            ]
          },
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.https",
            "aws_subnet.private_back",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:242906888793:instance/i-0367e730651f14b6b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0367e730651f14b6b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nsoroka-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0eb7b730b3e5aae6a",
            "private_dns": "ip-10-0-21-77.ec2.internal",
            "private_ip": "10.0.21.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b5d2c3265174b512",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03ba8b8a59679c60f",
            "tags": {
              "Name": "nsoroka-training-back-us-east-1b",
              "coherent:owner": "nikolaisoroka@coherentsolutions.com",
              "coherent:project": "devops-training"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09e497912fa0dcad2"
            ]
          },
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.https",
            "aws_subnet.private_back",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:242906888793:instance/i-00296d5008b99c823",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-00296d5008b99c823",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nsoroka-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a2c5f2ae3a0ccc4b",
            "private_dns": "ip-10-0-0-227.ec2.internal",
            "private_ip": "10.0.0.227",
            "public_ip": "3.90.154.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-002d7639613c9f24c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac27bd4ac95cde9c",
            "tags": {
              "Name": "nsoroka-training-bastion",
              "coherent:owner": "nikolaisoroka@coherentsolutions.com",
              "coherent:project": "devops-training"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0795f7485f6669394"
            ]
          },
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.ssh",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "front",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:242906888793:instance/i-08a141ba6a835a249",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-08a141ba6a835a249",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nsoroka-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-058d6b95e7e19e6c1",
            "private_dns": "ip-10-0-10-86.ec2.internal",
            "private_ip": "10.0.10.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b1ff5a35c95c2851",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f5a4d8bfc56a09b",
            "tags": {
              "Name": "nsoroka-training-front-us-east-1a",
              "coherent:owner": "nikolaisoroka@coherentsolutions.com",
              "coherent:project": "devops-training"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09e497912fa0dcad2"
            ]
          },
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.https",
            "aws_subnet.private_front",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:242906888793:instance/i-06f82601bb499e8dd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-06f82601bb499e8dd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nsoroka-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-03ecf146a3ac1af89",
            "private_dns": "ip-10-0-11-16.ec2.internal",
            "private_ip": "10.0.11.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03a8068a74436d456",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e7ebc647f083d390",
            "tags": {
              "Name": "nsoroka-training-front-us-east-1b",
              "coherent:owner": "nikolaisoroka@coherentsolutions.com",
              "coherent:project": "devops-training"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09e497912fa0dcad2"
            ]
          },
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.https",
            "aws_subnet.private_front",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:242906888793:instance/i-0c823a8dd01e0fd8b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0c823a8dd01e0fd8b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nsoroka-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-01b4cffebe2b17407",
            "private_dns": "ip-10-0-0-216.ec2.internal",
            "private_ip": "10.0.0.216",
            "public_ip": "54.162.237.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09f0bd0573158b728",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0ac27bd4ac95cde9c",
            "tags": {
              "Name": "nsoroka-training-nat",
              "coherent:owner": "nikolaisoroka@coherentsolutions.com",
              "coherent:project": "devops-training"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09e497912fa0dcad2"
            ]
          },
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.https",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0d3c5df22a97d498c",
            "owner_id": "242906888793",
            "tags": {
              "Name": "nsoroka-training-igw",
              "coherent:owner": "nikolaisoroka@coherentsolutions.com",
              "coherent:project": "devops-training"
            },
            "vpc_id": "vpc-0d075239fd3c32fd3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.back_lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:loadbalancer/net/nsoroka-training-back-lb/857e16947728b1d8",
            "arn_suffix": "net/nsoroka-training-back-lb/857e16947728b1d8",
            "dns_name": "nsoroka-training-back-lb-857e16947728b1d8.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:loadbalancer/net/nsoroka-training-back-lb/857e16947728b1d8",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "nsoroka-training-back-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03ba8b8a59679c60f"
              },
              {
                "subnet_id": "subnet-0d67da05ca6cf0ef9"
              }
            ],
            "subnets": [
              "subnet-03ba8b8a59679c60f",
              "subnet-0d67da05ca6cf0ef9"
            ],
            "tags": {
              "Name": "nsoroka-training-back-lb",
              "coherent:owner": "nikolaisoroka@coherentsolutions.com",
              "coherent:project": "devops-training",
              "env": "dev"
            },
            "vpc_id": "vpc-0d075239fd3c32fd3",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "aws_subnet.private_back",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:loadbalancer/app/nsoroka-training-lb-lb-public/350a8ef24e8c7449",
            "arn_suffix": "app/nsoroka-training-lb-lb-public/350a8ef24e8c7449",
            "dns_name": "nsoroka-training-lb-lb-public-854356234.us-east-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:loadbalancer/app/nsoroka-training-lb-lb-public/350a8ef24e8c7449",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nsoroka-training-lb-lb-public",
            "security_groups": [
              "sg-09e497912fa0dcad2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ac27bd4ac95cde9c"
              },
              {
                "subnet_id": "subnet-0e908790f27095936"
              }
            ],
            "subnets": [
              "subnet-0ac27bd4ac95cde9c",
              "subnet-0e908790f27095936"
            ],
            "tags": {
              "Name": "nsoroka-training-lb-lb-public",
              "coherent:owner": "nikolaisoroka@coherentsolutions.com",
              "coherent:project": "devops-training"
            },
            "vpc_id": "vpc-0d075239fd3c32fd3",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.https",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.back_lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener/net/nsoroka-training-back-lb/857e16947728b1d8/1d3f0350955c0d3e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/nsoroka-training-back-lb-tg/1ad0eaef99fa4e50",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener/net/nsoroka-training-back-lb/857e16947728b1d8/1d3f0350955c0d3e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:loadbalancer/net/nsoroka-training-back-lb/857e16947728b1d8",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_subnet.private_back",
            "aws_vpc.main",
            "module.back_lb.aws_lb.main",
            "module.back_lb.aws_lb_target_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener/app/nsoroka-training-lb-lb-public/350a8ef24e8c7449/78ae52896305970a",
            "certificate_arn": "arn:aws:acm:us-east-1:242906888793:certificate/f2e8b0e6-aa7a-48be-bedb-945df54a55f2",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/nsoroka-training-lb-tg-public/18ed89887ff46cdd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener/app/nsoroka-training-lb-lb-public/350a8ef24e8c7449/78ae52896305970a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:loadbalancer/app/nsoroka-training-lb-lb-public/350a8ef24e8c7449",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_security_group.https",
            "aws_subnet.public",
            "aws_vpc.main",
            "module.public_lb.aws_lb.public",
            "module.public_lb.aws_lb_target_group.public"
          ]
        }
      ]
    },
    {
      "module": "module.public_lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public_redirect",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener/app/nsoroka-training-lb-lb-public/350a8ef24e8c7449/a939b5b8c7896072",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:listener/app/nsoroka-training-lb-lb-public/350a8ef24e8c7449/a939b5b8c7896072",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:loadbalancer/app/nsoroka-training-lb-lb-public/350a8ef24e8c7449",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_security_group.https",
            "aws_subnet.public",
            "aws_vpc.main",
            "module.public_lb.aws_lb.public"
          ]
        }
      ]
    },
    {
      "module": "module.back_lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/nsoroka-training-back-lb-tg/1ad0eaef99fa4e50",
            "arn_suffix": "targetgroup/nsoroka-training-back-lb-tg/1ad0eaef99fa4e50",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/nsoroka-training-back-lb-tg/1ad0eaef99fa4e50",
            "lambda_multi_value_headers_enabled": false,
            "name": "nsoroka-training-back-lb-tg",
            "port": 8080,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Name": "nsoroka-training-back-lb-tg",
              "coherent:owner": "nikolaisoroka@coherentsolutions.com",
              "coherent:project": "devops-training",
              "env": "dev"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0d075239fd3c32fd3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/nsoroka-training-lb-tg-public/18ed89887ff46cdd",
            "arn_suffix": "targetgroup/nsoroka-training-lb-tg-public/18ed89887ff46cdd",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/nsoroka-training-lb-tg-public/18ed89887ff46cdd",
            "lambda_multi_value_headers_enabled": false,
            "name": "nsoroka-training-lb-tg-public",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "nsoroka-training-lb-tg-public",
              "coherent:owner": "nikolaisoroka@coherentsolutions.com",
              "coherent:project": "devops-training"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0d075239fd3c32fd3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.back_lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "all",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/nsoroka-training-back-lb-tg/1ad0eaef99fa4e50-20191215224716448600000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/nsoroka-training-back-lb-tg/1ad0eaef99fa4e50",
            "target_id": "i-061e86629df2ef1a3"
          },
          "dependencies": [
            "aws_instance.back",
            "aws_key_pair.main",
            "aws_security_group.https",
            "aws_subnet.private_back",
            "aws_vpc.main",
            "module.back_lb.aws_lb_target_group.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/nsoroka-training-back-lb-tg/1ad0eaef99fa4e50-20191215224716541900000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/nsoroka-training-back-lb-tg/1ad0eaef99fa4e50",
            "target_id": "i-0367e730651f14b6b"
          },
          "dependencies": [
            "aws_instance.back",
            "aws_key_pair.main",
            "aws_security_group.https",
            "aws_subnet.private_back",
            "aws_vpc.main",
            "module.back_lb.aws_lb_target_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/nsoroka-training-lb-tg-public/18ed89887ff46cdd-20191215224716582300000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/nsoroka-training-lb-tg-public/18ed89887ff46cdd",
            "target_id": "i-08a141ba6a835a249"
          },
          "dependencies": [
            "aws_instance.front",
            "aws_key_pair.main",
            "aws_security_group.https",
            "aws_subnet.private_front",
            "aws_vpc.main",
            "module.public_lb.aws_lb_target_group.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/nsoroka-training-lb-tg-public/18ed89887ff46cdd-20191215224716615800000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242906888793:targetgroup/nsoroka-training-lb-tg-public/18ed89887ff46cdd",
            "target_id": "i-06f82601bb499e8dd"
          },
          "dependencies": [
            "aws_instance.front",
            "aws_key_pair.main",
            "aws_security_group.https",
            "aws_subnet.private_front",
            "aws_vpc.main",
            "module.public_lb.aws_lb_target_group.public"
          ]
        }
      ]
    },
    {
      "module": "module.main_rt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ccf6b316119187d1",
            "owner_id": "242906888793",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d3c5df22a97d498c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nsoroka-training-main-rt",
              "coherent:owner": "nikolaisoroka@coherentsolutions.com",
              "coherent:project": "devops-training"
            },
            "vpc_id": "vpc-0d075239fd3c32fd3"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat_rt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0de14c4feea42cfbd",
            "owner_id": "242906888793",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-0c823a8dd01e0fd8b",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nsoroka-training-nat-rt",
              "coherent:owner": "nikolaisoroka@coherentsolutions.com",
              "coherent:project": "devops-training"
            },
            "vpc_id": "vpc-0d075239fd3c32fd3"
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_key_pair.main",
            "aws_security_group.https",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main_rt",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "all",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01180a003615b1e19",
            "route_table_id": "rtb-0ccf6b316119187d1",
            "subnet_id": "subnet-0ac27bd4ac95cde9c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "module.main_rt.aws_route_table.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d8c94570638c5b2",
            "route_table_id": "rtb-0ccf6b316119187d1",
            "subnet_id": "subnet-0e908790f27095936"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "module.main_rt.aws_route_table.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat_rt",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "all",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f253f09c74c42c64",
            "route_table_id": "rtb-0de14c4feea42cfbd",
            "subnet_id": "subnet-07f5a4d8bfc56a09b"
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_key_pair.main",
            "aws_security_group.https",
            "aws_subnet.private_back",
            "aws_subnet.private_front",
            "aws_subnet.public",
            "aws_vpc.main",
            "module.nat_rt.aws_route_table.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d97cdf082f407325",
            "route_table_id": "rtb-0de14c4feea42cfbd",
            "subnet_id": "subnet-0e7ebc647f083d390"
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_key_pair.main",
            "aws_security_group.https",
            "aws_subnet.private_back",
            "aws_subnet.private_front",
            "aws_subnet.public",
            "aws_vpc.main",
            "module.nat_rt.aws_route_table.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034248bbef42fd600",
            "route_table_id": "rtb-0de14c4feea42cfbd",
            "subnet_id": "subnet-0d67da05ca6cf0ef9"
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_key_pair.main",
            "aws_security_group.https",
            "aws_subnet.private_back",
            "aws_subnet.private_front",
            "aws_subnet.public",
            "aws_vpc.main",
            "module.nat_rt.aws_route_table.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040f0b96d5745a9d0",
            "route_table_id": "rtb-0de14c4feea42cfbd",
            "subnet_id": "subnet-03ba8b8a59679c60f"
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_key_pair.main",
            "aws_security_group.https",
            "aws_subnet.private_back",
            "aws_subnet.private_front",
            "aws_subnet.public",
            "aws_vpc.main",
            "module.nat_rt.aws_route_table.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242906888793:security-group/sg-09e497912fa0dcad2",
            "description": "Allow http, https inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e497912fa0dcad2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "nsoroka-training-sg-http-https",
            "name_prefix": null,
            "owner_id": "242906888793",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nsoroka-training-sg-http-https",
              "coherent:owner": "nikolaisoroka@coherentsolutions.com",
              "coherent:project": "devops-training"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d075239fd3c32fd3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242906888793:security-group/sg-0795f7485f6669394",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0795f7485f6669394",
            "ingress": [
              {
                "cidr_blocks": [
                  "87.252.225.208/32",
                  "104.59.125.84/32",
                  "216.70.7.11/32",
                  "80.94.174.82/32",
                  "82.209.242.80/29",
                  "86.57.155.180/32",
                  "86.57.158.250/32",
                  "146.120.13.128/28"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nsoroka-training-sg-ssh",
            "name_prefix": null,
            "owner_id": "242906888793",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nsoroka-training-sg-ssh",
              "coherent:owner": "nikolaisoroka@coherentsolutions.com",
              "coherent:project": "devops-training"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d075239fd3c32fd3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_back",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242906888793:subnet/subnet-0d67da05ca6cf0ef9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-0d67da05ca6cf0ef9",
            "map_public_ip_on_launch": false,
            "owner_id": "242906888793",
            "tags": {
              "Name": "nsoroka-training-prbk-sn-us-east-1a",
              "coherent:owner": "nikolaisoroka@coherentsolutions.com",
              "coherent:project": "devops-training"
            },
            "vpc_id": "vpc-0d075239fd3c32fd3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242906888793:subnet/subnet-03ba8b8a59679c60f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.21.0/24",
            "id": "subnet-03ba8b8a59679c60f",
            "map_public_ip_on_launch": false,
            "owner_id": "242906888793",
            "tags": {
              "Name": "nsoroka-training-prbk-sn-us-east-1b",
              "coherent:owner": "nikolaisoroka@coherentsolutions.com",
              "coherent:project": "devops-training"
            },
            "vpc_id": "vpc-0d075239fd3c32fd3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242906888793:subnet/subnet-0cdcf1bad1c80878a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.30.0/24",
            "id": "subnet-0cdcf1bad1c80878a",
            "map_public_ip_on_launch": false,
            "owner_id": "242906888793",
            "tags": {
              "Name": "nsoroka-training-prdb-sn-us-east-1a",
              "coherent:owner": "nikolaisoroka@coherentsolutions.com",
              "coherent:project": "devops-training"
            },
            "vpc_id": "vpc-0d075239fd3c32fd3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242906888793:subnet/subnet-0f7076119cd6d7a78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.31.0/24",
            "id": "subnet-0f7076119cd6d7a78",
            "map_public_ip_on_launch": false,
            "owner_id": "242906888793",
            "tags": {
              "Name": "nsoroka-training-prdb-sn-us-east-1b",
              "coherent:owner": "nikolaisoroka@coherentsolutions.com",
              "coherent:project": "devops-training"
            },
            "vpc_id": "vpc-0d075239fd3c32fd3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_front",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242906888793:subnet/subnet-07f5a4d8bfc56a09b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-07f5a4d8bfc56a09b",
            "map_public_ip_on_launch": false,
            "owner_id": "242906888793",
            "tags": {
              "Name": "nsoroka-training-prfr-sn-us-east-1a",
              "coherent:owner": "nikolaisoroka@coherentsolutions.com",
              "coherent:project": "devops-training"
            },
            "vpc_id": "vpc-0d075239fd3c32fd3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242906888793:subnet/subnet-0e7ebc647f083d390",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0e7ebc647f083d390",
            "map_public_ip_on_launch": false,
            "owner_id": "242906888793",
            "tags": {
              "Name": "nsoroka-training-prfr-sn-us-east-1b",
              "coherent:owner": "nikolaisoroka@coherentsolutions.com",
              "coherent:project": "devops-training"
            },
            "vpc_id": "vpc-0d075239fd3c32fd3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242906888793:subnet/subnet-0ac27bd4ac95cde9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0ac27bd4ac95cde9c",
            "map_public_ip_on_launch": true,
            "owner_id": "242906888793",
            "tags": {
              "Name": "nsoroka-training-pub-sn-us-east-1a",
              "coherent:owner": "nikolaisoroka@coherentsolutions.com",
              "coherent:project": "devops-training"
            },
            "vpc_id": "vpc-0d075239fd3c32fd3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242906888793:subnet/subnet-0e908790f27095936",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e908790f27095936",
            "map_public_ip_on_launch": true,
            "owner_id": "242906888793",
            "tags": {
              "Name": "nsoroka-training-pub-sn-us-east-1b",
              "coherent:owner": "nikolaisoroka@coherentsolutions.com",
              "coherent:project": "devops-training"
            },
            "vpc_id": "vpc-0d075239fd3c32fd3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242906888793:vpc/vpc-0d075239fd3c32fd3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0665f6bb5e2539ad3",
            "default_route_table_id": "rtb-0dca1df037df73766",
            "default_security_group_id": "sg-0c04dbb88f35f6e6f",
            "dhcp_options_id": "dopt-fdee0a98",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d075239fd3c32fd3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dca1df037df73766",
            "owner_id": "242906888793",
            "tags": {
              "Name": "nsoroka-training-vpc",
              "coherent:owner": "nikolaisoroka@coherentsolutions.com",
              "coherent:project": "devops-training"
            }
          }
        }
      ]
    }
  ]
}